--- a/src/app/components/post/post-form/post-form.component.html
+++ b/src/app/components/post/post-form/post-form.component.html
@@ -1,19 +1,33 @@
-<div class="post-form-container center" *ngIf="author">
+<div class="post-form center" *ngIf="author">
     <form (ngSubmit)="onSubmit($event)">
         <input type="text" name="title" class="post-title" placeholder="Post title..." [(ngModel)]="post.title" [disabled]="loader.form"><br>
         <textarea name="content" cols="60" rows="5" class="post-content" placeholder="Post content..." [(ngModel)]="post.content" [disabled]="loader.form"></textarea><br>
         
-        <div>
-            <label class="post-livechat-timeout left" *ngIf = "! loader.form">Live Chat Timeout: <input type="date" name="livechat-timeout" [(ngModel)]="post.liveChatExpires"> Days</label>
-        </div><br>
-
-        <span>{{ loader.form ? 'Live Chat Timeout: ' + lib.secondToTimeFormat(post.liveChatExpires - lib.nowInSeconds() + 1) : '' }}</span><br>
+        <div class="datepicker left">
+            <span *ngIf="! editDate" class="post-livechat-timeout">
+                Live Chat Expiry Date: {{ date.isExpired(post.liveChatExpires) ? 'Expired' : date.toLocaleDate(post.liveChatExpires) }}
+                <button type="button" (click)="editDate = true">Change</button>
+                <button type="button" (click)="setExpiryToDefault()">Get Default Timeout</button>
+            </span>
+            <span *ngIf="editDate">
+                <label class="post-livechat-timeout">
+                    Pick Expiry Date: 
+                    <input type="date" name="livechat-timeout" [(ngModel)]="post.liveChatExpires">
+                    <button type="button" (click)="setExpiryToDefault()">Get Default Timeout</button>
+                    <button type="button" (click)="editDate = false">Close</button><br>
+                    {{ date.isExpired(post.liveChatExpires) ? 'Expired' : date.toLocaleDate(post.liveChatExpires) }}
+                </label>
+            </span>
+        </div>
+        
         <div class="file-container d-flex align-items-center justify-content-center" *ngIf="post.data && post.data.length > 0">
             <div class="file-list" *ngFor="let data of post.data">
                 <img [src]="data.thumbnailUrl ? data.thumbnailUrl : data.url" alt="">
             </div>
+            
             <!-- {{ post.data | json }} -->
         </div>
+        
         {{ loader.file ? 'Uploading...' : '' }}
         <app-file-upload
         class="left"
@@ -23,8 +37,9 @@
         (uploadStart)="loader.file = true"
         (uploadDone)="onUploadDone($event)"
         ></app-file-upload>
-        <button class="btn btn-primary right" [disabled]="loader.form || loader.file">Submit</button>
-        <!-- <button class="btn btn-primary right" *ngIf="showCancel">Cancel</button> -->
+        
+        <button type="button" class="btn btn-outline-danger right" *ngIf="editMode" (click)="cancel.emit()">Cancel</button>
+        <button type="submit" class="btn btn-primary right" [disabled]="loader.form || loader.file">Submit</button>
     </form>
 </div>
-<!-- {{ post | json }} / {{ loader }} -->
+<!-- {{ post | json }} -->
