--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,18 +1,15 @@
 <div class="post-list-container">
-  
-  <app-post-form [category]="category" *ngIf="fire.user.isLogin"></app-post-form>
-
-  <br>
-  <br>
-
-  <div *ngIf="fire.post.pagePosts">
-      <div class="post-list" *ngFor=" let id of fire.post.pagePostIds">
-          <app-post-item 
-          *ngIf="! fire.post.pagePosts[id].deleted"
-          [post]="fire.post.pagePosts[id]" 
-          [showCategory]="category.id === 'all'"
-          (open) = "open.emit(fire.post.pagePosts[id])"
-          ></app-post-item>
-      </div>
-  </div>
+    <div class="post-form-container">
+        <app-post-form [category]="category" *ngIf="fire.user.isLogin"></app-post-form>
+    </div>
+    <div *ngIf="fire.post.pagePosts">
+        <div class="post-list" *ngFor=" let id of fire.post.pagePostIds">
+            <app-post-item 
+            *ngIf="! fire.post.pagePosts[id].deleted"
+            [post]="fire.post.pagePosts[id]" 
+            [showCategory]="category.id === 'all'"
+            (open) = "open.emit(fire.post.pagePosts[id])"
+            ></app-post-item>
+        </div>
+    </div>
 </div>
