--- a/src/app/components/post/post-item/post-item.component.html
+++ b/src/app/components/post/post-item/post-item.component.html
@@ -63,7 +63,7 @@
             <span>{{ getPostDate }}</span>
         </div><br>
 
-        <app-post-form [category]="post.category" [post]="post" [editMode]="true" (success)="editPost = false" (cancel)="editPost = false"></app-post-form>
+        <app-post-form [category]="category" [post]="post" [editMode]="true" (success)="editPost = false" (cancel)="editPost = false"></app-post-form>
     </div>
 
 </section>
